<resources>
    <string name="app_name">Summer camp</string>
    <string name="program">Program</string>
    <string name="description_program">Description program</string>
    <string name="help_info">If you have not found what you are looking for, or if you need additional information, it is RECOMMENDED that you contact us using the form opposite (Please note that during this pandemic period, we do not cannot work on site at our offices and are therefore not reachable by telephone at this time).</string>
    <string name="help_salut">Hope to meet you soon !</string>
    <string name="help_write_to_me">Write to us !</string>
    <string name="help_name">Name:</string>
    <string name="help_email">Email:</string>
    <string name="help_message">Message:</string>
    <string name="info_team">Team</string>
    <string name="info_informations">Informations</string>
    <string name="info_desc">Summer 2022 dates: June 22 to August 12. The first week, the camp will be open from Wednesday, June 22 until Friday, June 24 inclusively.</string>
    <string name="activities">Activities</string>
    <string name="info_desc_1">Our goal is to establish a balance between our activities promoting education and discovery with others focused on fun, holidays and play.</string>
    <string name="info_desc_2">The main activities of the different camp programs usually take place in the morning, and the afternoon is reserved for animation activities which allow you to let off steam and play in a larger group. Half of the day is therefore reserved as much as possible for outdoor activities whenever the weather permits (sports, water games, competitions, tournaments, special activities, etc.) and for outings to the park and games. of water.</string>
    <string name="info_desc_3">We are a big family of happy crazy people whose goal is to make your children have a wonderful summer!! More seriously, our instructors and coordinators are passionate people, specialized and experienced in the discipline they lead.</string>
    <string name="info_desc_4">Moreover, since we are the day camp of Collège André-Grasset, many of the team members are among the best students in our establishment and some others are academics. Finally, we always pay particular attention to the recruitment of our facilitators, who all have minimal training and experience.</string>
    <string name="info_desc_5">Each year, everyone receives training in animation for more than 15 hours as well as training in first aid and cardiovascular resuscitation.</string>
    <string name="main_desc">Welcome to our programs page! Based on the strengths of the André-Grasset college, the day camp offers a range of activities for everyone from 4 to 12 years old, according to each person\'s interests. With us, your children will be able to develop their scientific and technological curiosity, their artistic flair, and their sporting talent and make new friends!!</string>
    <string name="registration_mini_tiger">MiniTigers 3–5 years old</string>
    <string name="registration_planet_science">Planet Science</string>
    <string name="registration_budding_artists">Budding artists</string>
    <string name="registration_urban_farmer">Urban farmer</string>
    <string name="registration_dance">Dance</string>
    <string name="registration_circus_performer">Circus performer</string>
    <string name="registration_comic_strip">Comic Strip</string>
    <string name="registration_music">Music</string>
    <string name="registration_sport">Sport</string>
    <string name="registration_nom">Name:</string>
    <string name="registration_tel">Tel:</string>
    <string name="registration_email">Email:</string>
    <string name="registration_parent">Parent</string>
    <string name="registration_program">Program</string>
    <string name="registration_child_name">Name:</string>
    <string name="registration_age">Age:</string>
    <string name="registration_child">Child</string>
    <string name="menu_desc_return">Return</string>
    <string name="menu_desc_ajouter">Add</string>
    <string name="menu_help_return">Return</string>
    <string name="menu_help_envoyer">Send</string>
    <string name="menu_info_return">Return</string>
    <string name="menu_main_program">Program</string>
    <string name="menu_main_infomation">Information</string>
    <string name="menu_main_registration">Registration</string>
    <string name="menu_main_help">Help</string>
    <string name="menu_program_minitigres">MiniTigres 4–5 ans</string>
    <string name="menu_program_science">Science</string>
    <string name="menu_program_budding_artists">Budding artists</string>
    <string name="menu_program_urban_farmer">Urban farmer</string>
    <string name="menu_program_dance">Dance</string>
    <string name="menu_program_circus_performer">Circus performer</string>
    <string name="menu_program_comic_strip">Comic strip</string>
    <string name="menu_program_music">Music</string>
    <string name="menu_program_sport">Sport</string>
    <string name="menu_program_return">Return</string>
    <string name="menu_reg_return">Return</string>
    <string name="menu_reg_envoyer">Send</string>
</resources>