<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/minitigre"
        android:icon="@drawable/tiger"
        android:title="@string/menu_program_minitigres" />
    <item
        android:id="@+id/science"
        android:icon="@drawable/sciences"
        android:title="@string/menu_program_science" />
    <item
        android:id="@+id/artist"
        android:title="@string/menu_program_budding_artists" />
    <item
        android:id="@+id/fermier"
        android:icon="@drawable/fermier"
        android:title="@string/menu_program_urban_farmer" />
    <item
        android:id="@+id/dance"
        android:icon="@drawable/dance"
        android:title="@string/menu_program_dance" />
    <item
        android:id="@+id/artistCirque"
        android:icon="@drawable/cirque"
        android:title="@string/menu_program_circus_performer" />
    <item
        android:id="@+id/comicStrip"
        android:icon="@drawable/dessin"
        android:title="@string/menu_program_comic_strip" />
    <item
        android:id="@+id/music"
        android:icon="@drawable/music"
        android:title="@string/menu_program_music" />
    <item
        android:id="@+id/sport"
        android:icon="@drawable/sport"
        android:title="@string/menu_program_sport" />
    <item
        android:id="@+id/retour"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/menu_program_return"
        app:showAsAction="always" />
</menu>