<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/program"
        android:icon="@drawable/program"
        android:title="@string/menu_main_program"
        android:titleCondensed="PRO" />
    <item
        android:id="@+id/infomation"
        android:icon="@drawable/favicon"
        android:title="@string/menu_main_infomation"
        android:titleCondensed="INF" />
    <item
        android:id="@+id/registration"
        android:icon="@drawable/inscription"
        android:title="@string/menu_main_registration"
        android:titleCondensed="REG" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/help"
        android:title="@string/menu_main_help"
        app:showAsAction="always" />
</menu>